--- a/hopital-web/WebContent/hopital/accueil.html
+++ b/hopital-web/WebContent/hopital/accueil.html
@@ -3,29 +3,69 @@
 <head>
 <meta charset="UTF-8">
 <title>Accueil</title>
+<meta name="viewport" content="width=devide-width, initial-scale=1" />
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<script type="text/javascript"
+	src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="formations.js"></script>
+
 </head>
-<body>
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">Home</li>
-  </ol>
-</nav>
+<body class="container">
+	<nav aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="#">Hopital </a></li>
+			<li class="breadcrumb-item active" aria-current="page">Accueil</li>
+		</ol>
+	</nav>
+	<br>
+	<br>
 
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Home</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Library</li>
-  </ol>
-</nav>
+	<form class=""></form>
+	<div class="row">
+		<div class="custom-control custom-radio" style="color: #000000">
+			<input type="radio" class="custom-control-input"
+				id="defaultUnchecked" name="defaultExampleRadios" style="vertical-align: middle;"> <label
+				class="custom-control-label" for="defaultUnchecked" style="font-size: 25px">
+				Secretariat</label>
+		</div>
 
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Hopital</a></li>
-    <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Data</li>
-  </ol>
-</nav>
+	</div>
+	<br>
+	<!-- Default checked -->
+	<div class="row">
+		<div class="custom-control custom-radio" style="color: #000000">
+			<input type="radio" class="custom-control-input" id="defaultChecked"
+				name="defaultExampleRadios" checked> <label
+				class="custom-control-label" for="defaultChecked"
+				style="font-size: 25px">Medecin </label>
+		</div>
+	</div>
+	<br>
+	<!-- Default checked -->
+	<div class="row">
 
+		<div class="custom-control custom-radio" style="color: #000000">
+			<input type="radio" class="custom-control-input" id="defaultChecked"
+				name="defaultExampleRadios" checked> <label
+				class="custom-control-label" for="defaultChecked"
+				style="font-size: 25px">Patient </label>
+		</div>
 
+	</div>
+	<br>
+	<div class="row">
+		<div class="custom-control custom-radio" style="color: #000000">
+			<input type="radio" class="custom-control-input" id="defaultChecked"
+				name="defaultExampleRadios" checked> <label
+				class="custom-control-label" for="defaultChecked"
+				style="font-size: 25px">Administrateur </label>
+		</div>
+	</div>
+	<br>
+	<footer class="footer">
+		<div class="container">Copyright &copy;promo404.fr 2018</div>
+	</footer>
 </body>
+
 </html>
