--- a/hopital-web/WebContent/hopital/secretariat/login.html
+++ b/hopital-web/WebContent/hopital/secretariat/login.html
@@ -2,9 +2,60 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<title>Login Secretariat</title>
+<meta name="viewport" content="width=devide-width, initial-scale=1" />
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<script type="text/javascript"
+	src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="formations.js"></script>
 
+</head>
+<body class="container">
+	<nav aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="#">Hopital </a></li>
+			<li class="breadcrumb-item"><a href="#">Secretariat </a></li>
+			<li class="breadcrumb-item active" aria-current="page">Login</li>
+			
+		</ol>
+	</nav>
+	
+	<form class="form-horizontal" action="/action_page.php">
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="utilisateur">Utilisateur</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="utilisateur" placeholder="Enter utilisateur">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="pwd">Mot de Passe</label>
+    <div class="col-sm-10"> 
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+    </div>
+  </div>
+  <div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label><input type="checkbox"> Se souvenir de Moi</label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-primary col-sm-12" id="save">Envoyer</button>
+    </div>
+  </div>
+</form>
+	
+	
+	
+	
+	
+	
+	<footer class="footer">
+		<div class="container">Copyright &copy;promo404.fr 2018</div>
+	</footer>
 </body>
+
 </html>
