--- a/hopital-web/WebContent/hopital/secretariat/login.html
+++ b/hopital-web/WebContent/hopital/secretariat/login.html
@@ -43,7 +43,7 @@
   </div>
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary col-sm-12" id="save">Envoyer</button>
+      <button type="submit" class="btn btn-primary col-sm-12" id="save">Connexion</button>
     </div>
   </div>
 </form>
