Modif accueil + début Patient

--- a/hopital-web/WebContent/hopital/accueil.html
+++ b/hopital-web/WebContent/hopital/accueil.html
@@ -25,8 +25,8 @@
 	<div class="row">
 		<div class="custom-control custom-radio" style="color: #000000">
 			<input type="radio" class="custom-control-input"
-				id="defaultUnchecked" name="defaultExampleRadios" style="vertical-align: middle;"> <label
-				class="custom-control-label" for="defaultUnchecked" style="font-size: 25px">
+				id="defaultUnchecked1" name="defaultExampleRadios" style="vertical-align: middle;"> <label
+				class="custom-control-label" for="defaultUnchecked1" style="font-size: 25px">
 				Secretariat</label>
 		</div>
 
@@ -35,9 +35,9 @@
 	<!-- Default checked -->
 	<div class="row">
 		<div class="custom-control custom-radio" style="color: #000000">
-			<input type="radio" class="custom-control-input" id="defaultChecked"
-				name="defaultExampleRadios" checked> <label
-				class="custom-control-label" for="defaultChecked"
+			<input type="radio" class="custom-control-input" id="defaultChecked2"
+				name="defaultExampleRadios"> <label
+				class="custom-control-label" for="defaultChecked2"
 				style="font-size: 25px">Medecin </label>
 		</div>
 	</div>
@@ -46,9 +46,9 @@
 	<div class="row">
 
 		<div class="custom-control custom-radio" style="color: #000000">
-			<input type="radio" class="custom-control-input" id="defaultChecked"
-				name="defaultExampleRadios" checked> <label
-				class="custom-control-label" for="defaultChecked"
+			<input type="radio" class="custom-control-input" id="defaultChecked3"
+				name="defaultExampleRadios"> <label
+				class="custom-control-label" for="defaultChecked3"
 				style="font-size: 25px">Patient </label>
 		</div>
 
@@ -56,11 +56,16 @@
 	<br>
 	<div class="row">
 		<div class="custom-control custom-radio" style="color: #000000">
-			<input type="radio" class="custom-control-input" id="defaultChecked"
-				name="defaultExampleRadios" checked> <label
-				class="custom-control-label" for="defaultChecked"
+			<input type="radio" class="custom-control-input" id="defaultChecked4"
+				name="defaultExampleRadios"> <label
+				class="custom-control-label" for="defaultChecked4"
 				style="font-size: 25px">Administrateur </label>
 		</div>
+	</div>
+	
+	<div class="btn-group-vertical col-sm-3">
+					<button type="button" class="btn btn-primary btn-lg" style="margin-bottom: 20px; margin-top: 100%">Envoyer</button>
+					
 	</div>
 	<br>
 	<footer class="footer">
