--- a/hopital-web/WebContent/hopital/secretariat/accueil.html
+++ b/hopital-web/WebContent/hopital/secretariat/accueil.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Login Secretariat</title>
+<title>Accueil Secretariat</title>
 <meta name="viewport" content="width=devide-width, initial-scale=1" />
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
